feat(my referral screen): list accordion added

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Hello App Display Name</string>
+    <string name="app_name">Loot Mogul</string>
     <string name="server_client_id">322501477862-0pqk97a5r8q614m2t2tvob307oqdjt21.apps.googleusercontent.com</string>
     <string name="facebook_app_id">1201315480611641</string>
 </resources>
